--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -1,17 +1,17 @@
 /* General Styling */
 .App {
-  font-family: Arial, sans-serif;
+  font-family: 'Times New Roman', Times;
   text-align: center;
-  padding: 20px;
-  background: linear-gradient(to bottom, #f0f8ff, #d6eaf8);
+  padding: 5px;
+  background: linear-gradient(to bottom, #ffffff, #5face4);
   min-height: 100vh;
 }
 
 /* Header */
 h1 {
   font-size: 2.5rem;
-  color: #007bff;
-  margin-bottom: 20px;
+  color: #07478a;
+  margin-bottom: 50px;
 }
 
 /* Search Section */
@@ -24,23 +24,24 @@ h1 {
   font-size: 16px;
   width: 300px;
   margin-right: 10px;
-  border: 2px solid #007bff;
+  border: 2px solid #042140;
   border-radius: 5px;
 }
 
 .search-container button {
   padding: 10px 20px;
   font-size: 16px;
-  background-color: #007bff;
+  background: linear-gradient(45deg, #042140, #007bff);
   color: white;
   border: none;
   border-radius: 5px;
   cursor: pointer;
-  transition: background-color 0.3s ease;
+  transition: background-color 0.3s ease, transform 0.2s ease;
 }
 
 .search-container button:hover {
-  background-color: #0056b3;
+  background: linear-gradient(45deg, #0056b3, #042140);
+  transform: scale(1.1);
 }
 
 /* Error Message */
@@ -54,17 +55,18 @@ h1 {
   display: flex;
   flex-wrap: wrap;
   justify-content: center;
-  margin-top: 20px;
+  margin-top: 10px;
 }
 
 .movie-card {
   background: #f1f1f1;
-  border: 1px solid #ddd;
+  border: 1px solid #dddddd;
   border-radius: 8px;
+  box-shadow: #042140;
   padding: 15px;
   margin: 10px;
   width: 200px;
-  text-align: left;
+  text-align: center;
   box-shadow: 0px 4px 6px rgba(0, 0, 0, 0.1);
   transition: transform 0.2s ease;
 }
@@ -77,9 +79,9 @@ h1 {
 .footer {
   margin-top: 30px;
   padding: 10px;
-  background-color: #007bff;
+  background-color: #042140;
   color: white;
-  position: fixed;
+  position: sticky;
   bottom: 0;
   width: 100%;
   text-align: center;
@@ -87,7 +89,7 @@ h1 {
 
 .footer button {
   background: none;
-  color: white;
+  color: rgb(255, 255, 255);
   font-size: 16px;
   border: none;
   margin: 0 10px;
@@ -100,9 +102,9 @@ h1 {
 
 /* Modal */
 .modal-overlay {
-  position: fixed;
+  position: absolute;
   top: 0;
-  left: 0;
+  left: 10px;
   width: 100%;
   height: 100%;
   background: rgba(0, 0, 0, 0.6);
@@ -114,7 +116,7 @@ h1 {
 
 .modal-content {
   background: white;
-  padding: 20px;
+  padding: 10px;
   border-radius: 8px;
   width: 400px;
   text-align: center;
@@ -122,7 +124,7 @@ h1 {
   box-shadow: 0px 4px 10px rgba(0, 0, 0, 0.2);
 }
 
-.close-button {
+.close-button { 
   position: absolute;
   top: 10px;
   right: 15px;
@@ -134,4 +136,19 @@ h1 {
 
 .close-button:hover {
   color: red;
+}
+
+.link-button {
+  padding: 5px 10px;
+  font-size: 14px;
+  background-color: #007bff;
+  color: white;
+  border: none;
+  border-radius: 5px;
+  cursor: pointer;
+  transition: background-color 0.3s ease;
+}
+
+.link-button:hover {
+  background-color: #0056b3;
 }
